--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -1,5 +1,7 @@
 /* LoginForm.css */
-
+.signup{
+  background-color: #F1F0ED;
+}
 .signup-container {
   display: flex;
   justify-content: center;
@@ -28,7 +30,16 @@
   display: block;
   margin-bottom: 5px;
 }
-
+.bleu{
+  color: blue;
+  text-decoration: underline;
+}
+.headertext{
+  font-size: xx-large;
+  text-align: center;
+  align-content: center;
+  color: black;
+}
 .form-input {
   width: 100%;
   padding: 10px;
@@ -41,6 +52,7 @@
   padding: 10px;
   border: none;
   border-radius: 4px;
+
   background-color: #007bff;
   color: #fff;
   font-size: 16px;
