--- a/src/styles/LoginForm.css
+++ b/src/styles/LoginForm.css
@@ -3,7 +3,7 @@
 .login-container {
   display: flex;
   justify-content: center;
-  height: 100vh;
+  height: 400px;
 }
 
 
@@ -34,11 +34,16 @@
   width: 100%;
   padding: 10px;
   border: none;
-  border-radius: 4px;
+  border-radius: 24px;
   background-color: #007bff;
   color: #fff;
   font-size: 16px;
   cursor: pointer;
+}
+img{
+  width: 200px;
+  height: 200px;
+  background-color: transparent;
 }
 
 .btn-submit:hover {
@@ -73,6 +78,7 @@ h2 {
 }
 .login-form {
   min-width: 300px;
+  max-width: 500px;
   padding: 20px;
   margin-right: 20px;
   border-radius: 8px;
