--- a/src/styles/ListPosts.css
+++ b/src/styles/ListPosts.css
@@ -14,7 +14,17 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
 }
-
+.insert{
+  padding: 20px;
+  min-width: 700px;
+  border-radius: 25px;
+}
+.add_post{
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .card h3 {
   margin-top: 0;
 }
